--- a/fcmserver/src/main/resources/application.properties
+++ b/fcmserver/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.main.banner-mode=off
 
 # db properties
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@10.65.0.143:1523/GCAMPDEV
-spring.datasource.username= GCAM
-spring.datasource.password= dev_gcam
+spring.datasource.url=db url
+spring.datasource.username= db usernam
+spring.datasource.password= db pasword
 
 #logging
 logging.level.com.fcm.fcmserver=debug
